@@ -192,22 +192,22 @@ Unsafe variants of @scheme[car], @scheme[cdr], @scheme[mcar],
 
 
 @deftogether[(
-@defproc[(unsafe-unbox [v (and/c box? (not/c chaperone?))]) any/c]
-@defproc[(unsafe-set-box! [v (and/c box? (not/c chaperone?))] [val any/c]) void?]
-@defproc[(unsafe-unbox* [b box?]) fixnum?]
-@defproc[(unsafe-set-box*! [b box?] [k fixnum?]) void?]
+@defproc[(unsafe-unbox [b box?]) fixnum?]
+@defproc[(unsafe-set-box! [b box?] [k fixnum?]) void?]
+@defproc[(unsafe-unbox* [v (and/c box? (not/c chaperone?))]) any/c]
+@defproc[(unsafe-set-box*! [v (and/c box? (not/c chaperone?))] [val any/c]) void?]
 )]{
 
 Unsafe versions of @scheme[unbox] and @scheme[set-box!].}
 
 
 @deftogether[(
-@defproc[(unsafe-vector-length [v (and/c vector? (not/c chaperone?))]) fixnum?]
-@defproc[(unsafe-vector-ref [v (and/c vector? (not/c chaperone?))] [k fixnum?]) any/c]
-@defproc[(unsafe-vector-set! [v (and/c vector? (not/c chaperone?))] [k fixnum?] [val any/c]) void?]
-@defproc[(unsafe-vector*-length [v vector?]) fixnum?]
-@defproc[(unsafe-vector*-ref [v vector?] [k fixnum?]) any/c]
-@defproc[(unsafe-vector*-set! [v vector?] [k fixnum?] [val any/c]) void?]
+@defproc[(unsafe-vector-length [v vector?]) fixnum?]
+@defproc[(unsafe-vector-ref [v vector?] [k fixnum?]) any/c]
+@defproc[(unsafe-vector-set! [v vector?] [k fixnum?] [val any/c]) void?]
+@defproc[(unsafe-vector*-length [v (and/c vector? (not/c chaperone?))]) fixnum?]
+@defproc[(unsafe-vector*-ref [v (and/c vector? (not/c chaperone?))] [k fixnum?]) any/c]
+@defproc[(unsafe-vector*-set! [v (and/c vector? (not/c chaperone?))] [k fixnum?] [val any/c]) void?]
 )]{
 
 Unsafe versions of @scheme[vector-length], @scheme[vector-ref], and
@@ -282,10 +282,10 @@ Unsafe versions of @scheme[u16vector-ref] and
 
 
 @deftogether[(
-@defproc[(unsafe-struct-ref [v (not/c chaperone?)] [k fixnum?]) any/c]
-@defproc[(unsafe-struct-set! [v (not/c chaperone?)] [k fixnum?] [val any/c]) void?]
-@defproc[(unsafe-struct*-ref [v any/c] [k fixnum?]) any/c]
-@defproc[(unsafe-struct*-set! [v any/c] [k fixnum?] [val any/c]) void?]
+@defproc[(unsafe-struct-ref [v any/c] [k fixnum?]) any/c]
+@defproc[(unsafe-struct-set! [v any/c] [k fixnum?] [val any/c]) void?]
+@defproc[(unsafe-struct*-ref [v (not/c chaperone?)] [k fixnum?]) any/c]
+@defproc[(unsafe-struct*-set! [v (not/c chaperone?)] [k fixnum?] [val any/c]) void?]
 )]{
 
 Unsafe field access and update for an instance of a structure
